Completion with type filtering and tests added